--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,9 @@
     body {
       width: 700px;
     }
+    #links > * + * {
+      margin-top: 20px; /* 20pxの間隔を開ける */
+    }
   </style>
   <body>
     <h1>trace Links</h1>
