change link style

--- a/popup.html
+++ b/popup.html
@@ -29,7 +29,10 @@
           </div>
         </div>
 
-        <ul class="col s12 collection" id="links">
+        <ul class="col s12 collection">
+          <table>
+            <tbody id="links"></tbody>
+          </table>
         </ul>
       </div>
     </div>
