--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,14 @@
       body {
         width: 500px;
       }
+      .truncate-text > p{
+        width: 300px;
+      }
+      p {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
     </style>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
