--- a/options.html
+++ b/options.html
@@ -15,7 +15,7 @@
     <h1>Extension Settings</h1>
 
     <p>可視化ツールのURLを入力してください。traceIDになる部分は<strong>${traceparent}</strong>と記述してください。</p>
-    <label for="url" id="prod-url-label">Prod環境のURL: </label><br>
+    <label for="url" id="prod-url-label">prod環境のURL: </label><br>
     <input type="text" id="prod-url" name="url"><br>
     <button id="prod-save">Save</button><br>
 
