--- a/popup.html
+++ b/popup.html
@@ -3,15 +3,26 @@
   <head>
     <style>
       body {
-        width: 500px;
+        width: 400px;
       }
       .truncate-text > p{
-        width: 300px;
+        width: 250px;
       }
       p {
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
+      }
+      .left-block {
+        height: 53px;
+      }
+      .switch-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+      .reload-text {
+        margin-top: 5px;
       }
     </style>
     <!--Import Google Icon Font-->
@@ -25,15 +36,16 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col s7"><h5>Trace Links</h5></div>
-        <div class="col s5 valign-wrapper">
-          <div class="switch valign">
-            <label>
-              Off
-              <input type="checkbox">
-              <span class="lever"></span>
-              On
-            </label>
+        <div>
+          <div class="col offset-s2 s5"><h5>Trace Links</h5></div>
+          <div class="col s2 valign-wrapper left-block">
+            <div class="switch switch-container">
+              <label>
+                <input type="checkbox">
+                <span class="lever"></span>
+              </label>
+              <span class="reload-text">Reload</span>
+            </div>
           </div>
         </div>
 
