--- a/options.html
+++ b/options.html
@@ -17,8 +17,8 @@
       <div class="row">
         <h1 class="col s12">Extension Settings</h1>
         <div class="col s12">
-          <p>可視化ツールのURLを入力してください。urlの中のtraceIDに当たる箇所は<strong>${traceparent}</strong>と記述してください。</p>
-          <p>例: https://jaeger.example.com/trace/${traceparent}</p>
+          <p>可視化ツールのURLを入力してください。urlの中のtraceIDに当たる箇所は<strong>${traceid}</strong>と記述してください。</p>
+          <p>例: https://jaeger.example.com/trace/${traceid}</p>
         </div>
         <form class="col s12 toolForm" id="prod">
           <div class="md-form">
